Ran rubocop on Calculator and modified .yml specifications for line length

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -345,3 +345,6 @@ Style/InverseMethods:
 Style/ZeroLengthPredicate:
   Description: 'empty? instead of length == 0'
   Enabled: false
+  
+  Layout/LineLength:
+  Max: 200
