--- a/mortgage_calculator/mortgage_calc.yml
+++ b/mortgage_calculator/mortgage_calc.yml
@@ -1,5 +1,7 @@
 name: "Welcome to the Mortgage Loan Calculator! What is your name?"
 
+name_error: "Error: Please enter at least 1 character."
+
 welcome: "Let's calculate your monthly mortgage payment."
 
 loan_amount: "Please enter the total amount for your loan."
