--- a/rps/rps.yml
+++ b/rps/rps.yml
@@ -27,12 +27,12 @@ comp_spock: "Rockbot_5000 chose Spock!"
 tie: "Tied Point"
 
 
-comp_won_paper: "Paper beats Rock. That's a point for Rockbot."
-comp_won_rock: "Rock beats Scissors. That's a point for Rockbot."
-comp_won_scissors: "Scissors beats Paper. That's a point for Rockbot."
-user_won_paper: "Paper beats Rock. That's a point for you."
-user_won_rock: "Rock beats Scissors. That's a point for you."
-user_won_scissors: "Scissors beats Paper. That's a point for you."
+comp_won_paper: "Paper covered your Rock! That's a point for Rockbot."
+comp_won_rock: "Rock SMASH Scissors! That's a point for Rockbot."
+comp_won_scissors: "Scissors cut your Paper! That's a point for Rockbot."
+user_won_paper: "Paper covers Rock! That's a point for you."
+user_won_rock: "Rock SMASH Scissors! That's a point for you."
+user_won_scissors: "Scissors cuts Paper! That's a point for you."
 
 win: 'you won!'
 lose: 'you lost!'
