--- a/rps/rps.yml
+++ b/rps/rps.yml
@@ -24,39 +24,41 @@ comp_scissors: "Rockbot_5000 chose Scissors."
 comp_lizard: "Rockbot_5000 chose Lizard."
 comp_spock: "Rockbot_5000 chose Spock."
 
-tie: "Tied Point"
 
-user_won_paper_R: "Paper covers Rock! That's a point for you."
-user_won_rock_S: "Rock SMASH Scissors! That's a point for you."
+user_won_paper_vs_rock: "Paper covers Rock! That's a point for you."
+user_won_rock_vs_scissors: "Rock SMASH Scissors! That's a point for you."
 
-user_won_scissors_P: "Scissors cuts Paper! That's a point for you."
-user_won_rock_L: "Rock SMASH Lizard! That's a point for you."
+user_won_scissors_vs_paper: "Scissors cuts Paper! That's a point for you."
+user_won_rock_vs_lizard: "Rock SMASH Lizard! That's a point for you."
 
-user_won_lizard_SP: "Lizard licks Spock! He's helpless! That's a point for you."
+user_won_lizard_vs_spock: "Lizard licks Spock! He's helpless! That's a point for you."
 user_won_spock_S: "Spock used mind powers on the scissors! Scissors are mindless. Spock wins. That's a point for you."
 
-user_won_scissors_L: "Scissors decapitated Lizard! That's a point for you."
-user_won_lizard_P: "Lizard ate the Paper! That's a point for you."
+user_won_scissors_vs_lizard: "Scissors decapitated Lizard! That's a point for you."
+user_won_lizard_vs_paper: "Lizard ate the Paper! That's a point for you."
 
-user_won_paper_SP: "Paper makes fun of Spock. Spock cries. That's a point for you."
-user_won_spock_R: "Spock vaporized Rock! It's totally effective! That's a point for you."
+user_won_paper_vs_spock: "Paper makes fun of Spock. Spock cries. That's a point for you."
+user_won_spock_vs_rock: "Spock vaporized Rock! It's totally effective! That's a point for you."
 
 
 
-comp_won_paper_R: "Paper covered the Rock! That's a point for Rockbot."
-comp_won_rock_S: "Rock SMASH Scissors! That's a point for Rockbot."
+comp_won_rock_vs_paper: "Paper covered the Rock! That's a point for Rockbot."
+comp_won_scissors_vs_rock: "Rock SMASH Scissors! That's a point for Rockbot."
 
-comp_won_scissors_P: "Scissors cut the Paper! That's a point for Rockbot."
+comp_won_paper_vs_scissors: "Scissors cut the Paper! That's a point for Rockbot."
 comp_won_rock_L: "Rock SMASH Lizard! That's a point for Rockbot."
 
-comp_won_lizard_SP: "Lizard licks Spock! He's helpless! That's a point for Rockbot."
-comp_won_spock_S: "Spock used mind powers on the Scissors! Scissors are mindless. Spock wins. That's a point for Rockbot."
+comp_won_spock_vs_lizard: "Lizard licks Spock! He's helpless! That's a point for Rockbot."
+comp_won_scissors_vs_spock: "Spock used mind powers on the Scissors! Scissors are mindless. Spock wins. That's a point for Rockbot."
 
-comp_won_scissors_L: "Scissors decapitated Lizard! That's a point for Rockbot."
-comp_won_lizard_P: "Lizard ate the Paper! That's a point for Rockbot."
+comp_won_lizard_vs_scissors: "Scissors decapitated Lizard! That's a point for Rockbot."
+comp_won_paper_vs_lizard: "Lizard ate the Paper! That's a point for Rockbot."
 
-comp_won_paper_SP: "Paper makes fun of Spock. Spock cries. That's a point for Rockbot."
-comp_won_spock_R: "Spock vaporized Rock! It's totally effective! That's a point for Rockbot."
+comp_won_spock_vs_paper: "Paper makes fun of Spock. Spock cries. That's a point for Rockbot."
+comp_won_rock_vs_spock: "Spock vaporized Rock! It's totally effective! That's a point for Rockbot."
+
+
+tie: "Tied Point"
 
 
 win: 'you won!'
