--- a/rps/rps.yml
+++ b/rps/rps.yml
@@ -8,7 +8,7 @@ username_1: "Welcome, to the arena,"
 
 username_2: "where blood is shed and legends are forged."
 
-user_choice: "It's time to choose your weapon. Enter r for Rock, p for Paper, s for scissors, l for lizard, or sp for Spock."
+user_choice: "It's time to choose your weapon. Enter r for Rock, p for Paper, s for scissors, l for lizard, or sp for Spock (Q to Quit)."
 
 user_choice_error: "Error: Choose r for Rock, p for Paper, s for scissors, l for lizard, or sp for Spock."
 
@@ -32,7 +32,7 @@ user_won_scissors_vs_paper: "Scissors cuts Paper! That's a point for you."
 user_won_rock_vs_lizard: "Rock SMASH Lizard! That's a point for you."
 
 user_won_lizard_vs_spock: "Lizard poisons Spock! That's a point for you."
-user_won_spock_S: "Spock throws Scissors in the garbage! That's a point for you."
+user_won_spock_vs_scissors: "Spock throws Scissors in the garbage! That's a point for you."
 
 user_won_scissors_vs_lizard: "Scissors decapitates Lizard! That's a point for you."
 user_won_lizard_vs_paper: "Lizard eats Paper! That's a point for you."
@@ -46,7 +46,7 @@ comp_won_rock_vs_paper: "Paper covers Rock! That's a point for Rockbot."
 comp_won_scissors_vs_rock: "Rock SMASH Scissors! That's a point for Rockbot."
 
 comp_won_paper_vs_scissors: "Scissors cuts Paper! That's a point for Rockbot."
-comp_won_rock_L: "Rock SMASH Lizard! That's a point for Rockbot."
+comp_won_lizard_vs_rock: "Rock SMASH Lizard! That's a point for Rockbot."
 
 comp_won_spock_vs_lizard: "Lizard poisons Spock! That's a point for Rockbot."
 comp_won_scissors_vs_spock: "Spock throws Scissors in the garbage! That's a point for Rockbot."
@@ -61,7 +61,9 @@ comp_won_rock_vs_spock: "Spock vaporizes Rock! It's totally effective! That's a 
 tie: "Tied Point"
 
 
-win: 'you won!'
-lose: 'you lost!'
+win: "you won! Rockbot cries 1's and 0's."
+lose: 'you lost! Better luck next time :P'
 
 new_game: "Play again? Enter Y / N."
+
+thanks: "Thanks for playing, "
